# audio-emotions

./: MANIFEST.in  README.md  pyproject.toml  test.py
audio_emotions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
audio_emotions/audio_emotions/: create_csv.py  data_extractor.py  emotion_recognition.py  test_custom.csv  test_tess_ravdess.csv  train_custom.csv  train_tess_ravdess.csv  utils.py
features/: test_mfcc-chroma-mel_ACDFHPS_24.npy  test_mfcc-chroma-mel_ACDFHPS_839.npy  train_mfcc-chroma-mel_ACDFHPS_49.npy
