[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-emotions"
version = "1.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Predict emotions from audio"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "librosa==0.8.1",
  "numpy==1.23.5",
  "pandas",
  "soundfile==0.12.1",
  "wave",
  "scikit-learn==0.24.2",
  "tqdm==4.28.1",
  "matplotlib==2.2.3",
  "pyaudio==0.2.11",
  "tensorflow==2.5.2"
]

[project.urls]
"Homepage" = "https://github.com/x4nth055/emotion-recognition-using-speech"
"Bug Tracker" = "https://github.com/x4nth055/emotion-recognition-using-speech/issues"
