[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_emotions"
version = "1.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Predict emotions from audio"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "librosa==0.8.1",
  "numpy==1.23.5",
  "pandas",
  "soundfile==0.12.1",
  "wave",
  "scikit-learn==1.3.1",
  "tqdm==4.66.1",
  "matplotlib==3.7.3",
  "pyaudio==0.2.13",
  "tensorflow==2.13.0"
]

[project.urls]
"Homepage" = "https://github.com/x4nth055/emotion-recognition-using-speech"
"Bug Tracker" = "https://github.com/x4nth055/emotion-recognition-using-speech/issues"
